# LINE-AI

./: .gitignore  Dockerfile  Dockerfile.cloudrun  README.md  cloudbuild.yaml  create_env.py  directorystructure.md  env_example.txt  gunicorn.cloudrun.conf.py  gunicorn.conf.py  line-running-consultation.service  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start_service.bat  technologystack.md  機能.md  要件定義.md
api/: __init__.py
api/routes/: __init__.py  health.py  webhook.py
app/: __init__.py  config.py  main.py
core/: __init__.py
core/ai/: __init__.py
core/ai/rag/: __init__.py  knowledge_base.py
core/services/: __init__.py  ai_service.py  line_service.py
infrastructure/database/: connection.py
infrastructure/database/models/: training_log.py  user.py
scripts/: deploy.sh  deploy_cloudrun.sh  monitor.sh  setup_db.py  windows_service.py
tests/: __init__.py  test_ai_service.py  test_database.py  test_health.py  test_knowledge_base.py
